src/objects/FAU_Milestone__c.object
<CustomObject>
    <description>Four Acres Object to hold the program milestone which involve the participants status and Information for completion.</description>
    <fields>
        <fullName>FAU_1st_Reminder__c</fullName>
        <label>1st Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_2nd_Reminder__c</fullName>
        <label>2nd_Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Information_Link__c</fullName>
        <formula>HYPERLINK( FAU_Information_to_Complete__c , &apos;Milestone Information&apos;)</formula>
        <label>Information Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Information_to_Complete__c</fullName>
        <description>This a link to a website to help the  participant complete this milestone</description>
        <inlineHelpText>This a link to a website to help the  participant complete this milestone</inlineHelpText>
        <label>Information to Complete</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FAU_Milestone_Completition__c</fullName>
        <label>Milestone Completion</label>
        <picklist>
            <picklistValues>
                <fullName>Participant Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAU_No_Milestone_Participants_Completed__c</fullName>
        <label>Number Milestone Participants Completed</label>
        <summaryFilterItems>
            <field>FAU_Milestone_Participant__c.FAU_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FAU_Milestone_Participant__c.FAU_Participant_s_Invite_Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>FAU_Milestone_Participant__c.FAU_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FAU_No_Milestone_Participants__c</fullName>
        <label>No Milestone Participants</label>
        <summaryForeignKey>FAU_Milestone_Participant__c.FAU_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Wave__c</fullName>
        <label>Program</label>
        <referenceTo>FAU_Program__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FAU_Send_Reminder_at_Due_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder at Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FAU_Cannot_Change_Completion</fullName>
        <active>true</active>
        <description>You can&apos;t change a milestone completion when a participant completes a milestone.
Delete the milestone and create a new one if needed.</description>
        <errorConditionFormula>(FAU_No_Milestone_Participants_Completed__c &gt; 0) &amp;&amp;  ISCHANGED( FAU_Milestone_Completition__c )</errorConditionFormula>
        <errorDisplayField>FAU_Information_to_Complete__c</errorDisplayField>
        <errorMessage>You can&apos;t change a milestone completion when a participant completes a milestone.
Delete the milestone and create a new one if needed.</errorMessage>
    </validationRules>
</CustomObject>